--- a/clave/html/index.html
+++ b/clave/html/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Clave "Bancumbia"</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <section class="caja_clave">
-  <input type="password" placeholder="Clave acá" class="clave">
+<input type="password" placeholder="Clave acá" class="clave">
   <section id="teclado">
     <input type="button" value="1" class="tecla">
     <input type="button" value="2" class="tecla">
@@ -21,7 +21,9 @@
     <input type="button" value="9" class="tecla">
     <input type="button" value="0" class="tecla">
     <input type="button" value="Borrar" class="tecla borrar">
+    <input type="button" value="Confirmar" class="tecla confirmar">
   </section>  
 </section>
+<script src="/js/javascript.js"></script>
 </body>
 </html>
