--- a/clave/html/index.html
+++ b/clave/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clave "Bancumbia"</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/clave/css/style.css">
 </head>
 <body>
     <section class="caja_clave">
@@ -24,6 +24,6 @@
     <input type="button" value="Confirmar" class="tecla confirmar">
   </section>  
 </section>
-<script src="/js/javascript.js"></script>
+<script src="/clave/js/javascript.js"></script>
 </body>
 </html>
